--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
  Terraform:
     name: 'Terraform'
-    runs-on: runs-on:[self-hosted, linux, x64]
+    runs-on: [self-hosted, linux, x64] 
     defaults:
       run:
         shell: bash
