--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,36 +1,8 @@
-name: Terraform CI
-
-on:
-  push:
-    branches:
-      - main
-
+name: GitHub Actions Demo
+on: [push]
 jobs:
- Terraform:
-    name: 'Terraform'
+  Explore-GitHub-Actions:
     runs-on: self-hosted
-    defaults:
-      run:
-        shell: bash
-        working-directory: .
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4      
-      
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        cli_config_credentials_token: ${{ secrets.tfc_team_token }}
-      
-    - name: Terraform Init
-      run: terraform init
-   
-    - name: Terraform Validate
-      run: terraform validate
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
     
-       
-    - name: Terraform Plan
-      run: terraform plan
-         
-    - name: Terraform Apply
-      run: terraform apply -auto-approve
