--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,45 +1,36 @@
-name: 'Terraform CI'
+name: Terraform CI
 
 on:
   push:
     branches:
-    - main
-  pull_request:
+      - main
 
 jobs:
-  terraform:
+  Terraform:
     name: 'Terraform'
-    runs-on: self-hosted
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    runs-on: ubuntu-latest
     defaults:
       run:
         shell: bash
-
+        working-directory: .
     steps:
-    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-      uses: actions/checkout@v2
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      uses: actions/checkout@v4      
+      
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1        
-
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      uses: hashicorp/setup-terraform@v1
+      with:
+        cli_config_credentials_token: ${{ secrets.tfc_team_token }}
+      
     - name: Terraform Init
       run: terraform init
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
-    # Generates an execution plan for Terraform
+   
+    - name: Terraform Validate
+      run: terraform validate
+    
+       
     - name: Terraform Plan
-      run: terraform plan -input=false
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
-
-      # On push to main, build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
+      run: terraform plan
+         
     - name: Terraform Apply
       run: terraform apply -auto-approve
-      env:
-        GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS }}
